<resources>
    <string name="app_name">Vita in Line</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="uz">UZ</string>
    <string name="sing_up">Sing up</string>
    <string name="sing_in">Sing in</string>
    <string name="code">*******</string>
    <string name="password_passport_series">Password(Passport series)</string>
    <string name="enter_login">Enter login</string>
    <string name="login_birthday_date">Login(Birthday date)</string>
    <string name="log">Log</string>
    <string name="in">in</string>
    <string name="the_login_or_password_was_entered_incorrectly_please_try_again">The login or password was entered incorrectly,                please try again!</string>
    <string name="sign">Sign</string>
    <string name="up">up</string>
    <string name="please_fill_in_the_fields_below_to_register">Please fill in the fields below to register</string>
    <string name="fullname">Fullname</string>
    <string name="eshonov_fakhriyor_farhodbek_o_g_li">(Eshonov Fakhriyor Farhodbek o\'g\'li)</string>
    <string name="birthday_date">Birthday date</string>
    <string name="choose">Choose</string>
    <string name="passport_series_and_number">Passport series and number</string>
    <string name="aa1234567">AA1234567</string>
    <string name="region">Region</string>
    <string name="your_workplace">Your workplace</string>
    <string name="unemployed">(Unemployed)</string>
    <string name="telephone_number">Telephone number</string>
    <string name="sign_up">Sign up</string>
    <string name="_998">+998 --- -- --</string>
    <string name="davolanish">Davolanish</string>
    <string name="_8_00">8:00</string>
    <string name="_2_ta_tabletka">2 ta tabletka</string>
    <string name="och_qoringa">Och qoringa</string>
    <string name="dots">------------</string>
    <string name="dots2">------------</string>
    <string name="today">Today</string>
    <string name="history">History</string>
    <string name="recommendation">Recommendation</string>
    <string name="blood_pressure_check">Blood pressure check</string>
    <string name="yesterday">Yesterday</string>
    <string name="about_medicine">About Medicine</string>
    <string name="consult_with_cardiologist">Consult with Cardiologist</string>

    <string-array name="languages">

        <item>UZ</item>
        <item>EN</item>
        <item>RU</item>

    </string-array>

    <string-array name="Regions">

        <item>Andijon</item>
        <item>Namangan</item>
        <item>Fargona</item>
        <item>Toshkent</item>
        <item>Sirdaryo</item>
        <item>Jizzax</item>
        <item>Samarqand</item>
        <item>Qashqadaryo</item>
        <item>Surxandaryo</item>
        <item>Buxoro</item>
        <item>Navoiy</item>
        <item>Xorazm</item>
        <item>Qoraqalpogiston</item>

    </string-array>
</resources>