<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragments.RegisterFragment">

    <LinearLayout
        android:id="@+id/linearUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_100"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/imgBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/teal_300"
            app:cardCornerRadius="8dp">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/keyboard_arrow_left_24" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/sign"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/up"
                android:textColor="@color/teal_300"
                android:textSize="28sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/please_fill_in_the_fields_below_to_register"
            android:textSize="18sp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginVertical="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:paddingStart="0dp"
                android:text="@string/fullname" />

            <EditText
                android:id="@+id/etFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/layout_background"
                android:backgroundTintMode="@color/teal_100"
                android:hint="@string/eshonov_fakhriyor_farhodbek_o_g_li"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:paddingStart="12dp"
                android:textColorHint="@color/grey" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:paddingStart="0dp"
                android:text="@string/birthday_date" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/editDateLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_background"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="8dp"
                    android:src="@drawable/calendar_month_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textDateChoose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:text="@string/choose"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/imageView3"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/textDateChooseArrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/keyboard_arrow_right_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="*"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textViewInfo3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="  Attention, this information is used as a login"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:paddingStart="0dp"
                android:text="@string/passport_series_and_number" />

            <com.vicmikhailau.maskededittext.MaskedEditText
                android:id="@+id/edtSeriaNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_background"
                android:hint="@string/aa1234567"
                android:inputType="text"
                android:minHeight="48dp"
                android:padding="8dp"
                android:textColor="@android:color/black"
                android:textColorHint="@color/grey"
                app:mask="UU#######" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewInfo4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="*"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textViewInfo5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="  Attention, this information is used as a login"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:paddingStart="0dp"
                android:text="@string/region" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/editRegionLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/layout_background"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textRegionChoose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:text="@string/choose"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/textRegionChooseArrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/keyboard_arrow_right_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:paddingStart="0dp"
                android:text="@string/your_workplace" />

            <EditText
                android:id="@+id/etWork"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/layout_background"
                android:hint="@string/unemployed"
                android:inputType="text"
                android:minHeight="48dp"
                android:paddingStart="12dp"
                android:textColorHint="@color/grey" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:paddingStart="0dp"
                android:text="@string/telephone_number" />

            <com.vicmikhailau.maskededittext.MaskedEditText
                android:id="@+id/edtPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_background"
                android:hint="@string/_998"
                android:inputType="phone"
                android:minHeight="48dp"
                android:padding="8dp"
                android:textColor="@android:color/black"
                app:mask="+998 ##-###-##-##" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/registerBtn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginVertical="16dp"
                android:background="@drawable/button_back"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewInfo2">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sing_up"
                    android:padding="8dp"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>